welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:42: error: ';' expected but 'return' found.
			} return true
                          ^